# Lit-Thesis

./: .gitignore  README.md
dolgozat/: dolgozat.sty  dolgozat.tex  osszegzes.tex  summary.tex
dolgozat/cimlap/: cimlap.tex
dolgozat/fejezetek/: 1_bevezetes.tex  2_fire.tex  3_physics.tex  4_design.tex  5_implementation.tex  6_results.tex  7_summary.tex
dolgozat/feladatkiiras/: feladatkiiras.tex
dolgozat/hasznalat/: hasznalat.tex
dolgozat/irodalomjegyzek/: irodalom.tex
projektek/BasicParticleSystem/: CMakeLists.txt
projektek/BasicParticleSystem/include/: camera.hpp  dynamicFog.hpp  environment.hpp  forest.hpp  object.hpp  objectLoader.hpp  rain.hpp  sky.hpp
projektek/BasicParticleSystem/src/: camera.cpp  dynamicFog.cpp  environment.cpp  forest.cpp  light.cpp  main.cpp  model.cpp  object.cpp  objectLoader.cpp  rain.cpp  sky.cpp
projektek/ParticleFire/: CMakeLists.txt
projektek/ParticleFire/include/: camera.hpp  fire.hpp  heightmap.hpp  model.hpp  postprocessor.hpp
projektek/ParticleFire/src/: blendPictures.fs  blendPictures.vs  camera.cpp  createDistortionMap.fs  fire.cpp  fireShader.fs  fireShader.vs  main.cpp  noEffectFBO.fs  phong.vs  postProcessor.fs  postprocessor.cpp  sky.cpp  sphere.cpp  unifColor-Phong.fs
projektek/ParticleFire/src/tdogl/: Program.cpp
projektek/SpriteFire/: CMakeLists.txt
projektek/SpriteFire/include/: camera.hpp  environment.hpp  fire.hpp  light.hpp  sky.hpp  sphere.hpp  texture.hpp
projektek/SpriteFire/src/: camera.cpp  fire.cpp  fireShader.fs  fireShader.vs  heightmap.cpp  main.cpp  phong.fs  texture.cpp  (+1 more)
(+2 files in other folders)
